adding abstractions and services

--- a/src/assets/i18n/gb.json
+++ b/src/assets/i18n/gb.json
@@ -1,4 +1,9 @@
 {
+  "generic": {
+    "messages": {
+      "confirm-deletion": "The element will be permanently delete. Do you want to proceed?"
+    }
+  },
   "primeng": {
     "startsWith": "Starts with",
     "contains": "Contains",
