style(app): add typefaces and custom theme for the application

--- a/src/assets/i18n/gb.json
+++ b/src/assets/i18n/gb.json
@@ -1,4 +1,5 @@
 {
+  "app_name": "smdn",
   "generic": {
     "messages": {
       "confirm-deletion": "The element will be permanently delete. Do you want to proceed?"
