--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,4 +1,5 @@
 {
+  "app_name": "smdn",
   "generic": {
     "messages": {
       "confirm_deletion": "L'elemento verrà eliminato definitivamente. Vuoi procedere?"
