--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -57,31 +57,8 @@
   "menu": {
     "public": {
       "home": "Home",
-      "schedule": "Programmazione",
-      "orders": "Ordina subito"
-    },
-    "admin": {
-      "security": {
-        "label": "Sicurezza",
-        "signup": "Nuovo utente"
-      },
-      "collections": {
-        "label": "Anagrafiche",
-        "dish_categories": "Categorie piatto",
-        "dishes": "Piatti",
-        "restaurants": "Ristoranti",
-        "scheduled_events": "Programma eventi"
-      }
-    },
-    "auth": {
-      "pos": {
-        "label": "POS",
-        "counter": "Cassa"
-      },
-      "reports": {
-        "label": "Reports",
-        "emitted_orders": "Ordini emessi"
-      }
+      "events": "Programmazione",
+      "restaurants": "Ordina subito"
     }
   },
   "components": {
