--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -58,7 +58,7 @@
     "public": {
       "home": "Home",
       "events": "Programmazione",
-      "restaurants": "Ordina subito"
+      "restaurants": "Ristorazione"
     }
   },
   "components": {
