refactor(events.component): Add translation support and refactor events module
Introduced the `ngx-translate` module to the events module for i18n support. Also, cleaned up unused code in `events.component.ts` and changed CSS styles in `events.component.less` for height, background image rendering, and typography attributes. Also, the content of events in `events.component.html` now uses keys for translation instead of hard-coded text. The translation for 'programma 2024' has been added to `it.json`.

Signed-off-by: riccardocampani96 <riccardocampani96@gmail.com>

#wip #introducesTodo

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -65,5 +65,12 @@
     "error": {
       "title": "Oops. C'è stato un errore."
     }
+  },
+  "pages": {
+    "public": {
+      "events": {
+        "title": "programma 2024"
+      }
+    }
   }
 }
