--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -68,6 +68,20 @@
   },
   "pages": {
     "public": {
+      "home": {
+        "title": "è tempo di sagra",
+        "subtitle": "Dal 2 al 4 agosto a Vezzano sul Crostolo",
+        "events": {
+          "title": "eventi",
+          "subtitle": "Scopri che eventi ti aspettano alla nostra sagra",
+          "cta": "Programmazione"
+        },
+        "food": {
+          "title": "ristorazione",
+          "subtitle": "La fame si fa sentire? Dai un occhiata ai nostri punti ristoro!",
+          "cta": "Menù"
+        }
+      },
       "events": {
         "title": "programma 2024"
       }
