--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -83,7 +83,21 @@
         }
       },
       "events": {
-        "title": "programma 2024"
+        "title": "programma 2024",
+        "monthLabels": [
+          { "full": "Gen", "short": "01" },
+          { "full": "Feb", "short": "02" },
+          { "full": "Mar", "short": "03" },
+          { "full": "Apr", "short": "04" },
+          { "full": "Mag", "short": "05" },
+          { "full": "Giu", "short": "06" },
+          { "full": "Lug", "short": "07" },
+          { "full": "Ago", "short": "08" },
+          { "full": "Set", "short": "09" },
+          { "full": "Ott", "short": "10" },
+          { "full": "Nov", "short": "11" },
+          { "full": "Dic", "short": "12" }
+        ]
       }
     }
   }
