chore(restaurants): Refactor JSON objects and update translatePrefix in component
The JSON objects from src/assets/i18n/it.json have been formatted for better readability. Each array item and object attribute are now on separate lines. Furthermore, the translatePrefix in restaurants.component.ts has been updated to point to the correct translation route. A TODO for initialization logic has also been added.

Signed-off-by: riccardocampani96 <riccardocampani96@gmail.com>

#wip #introducesTodo

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -38,11 +38,61 @@
     "choose": "Scegli",
     "upload": "Carica",
     "cancel": "Annulla",
-    "dayNames": ["Domenica", "Lunedì", "Martedì", "Mercoledì", "Giovedì", "Venerdì", "Sabato"],
-    "dayNamesShort": ["Dom", "Lun", "Mar", "Mer", "Gio", "Ven", "Sab"],
-    "dayNamesMin": ["Do","Lu","Ma","Me","Gi","Ve","Sa"],
-    "monthNames": ["Gennaio","Febbraio","Marzo","Aprile","Maggio","Giugno","Luglio","Agosto","Settembre","Ottobre","Novembre","Dicembre"],
-    "monthNamesShort": ["Gen", "Feb", "Mar", "Apr", "Mag", "Giu","Lug", "Ago", "Set", "Ott", "Nov", "Dic"],
+    "dayNames": [
+      "Domenica",
+      "Lunedì",
+      "Martedì",
+      "Mercoledì",
+      "Giovedì",
+      "Venerdì",
+      "Sabato"
+    ],
+    "dayNamesShort": [
+      "Dom",
+      "Lun",
+      "Mar",
+      "Mer",
+      "Gio",
+      "Ven",
+      "Sab"
+    ],
+    "dayNamesMin": [
+      "Do",
+      "Lu",
+      "Ma",
+      "Me",
+      "Gi",
+      "Ve",
+      "Sa"
+    ],
+    "monthNames": [
+      "Gennaio",
+      "Febbraio",
+      "Marzo",
+      "Aprile",
+      "Maggio",
+      "Giugno",
+      "Luglio",
+      "Agosto",
+      "Settembre",
+      "Ottobre",
+      "Novembre",
+      "Dicembre"
+    ],
+    "monthNamesShort": [
+      "Gen",
+      "Feb",
+      "Mar",
+      "Apr",
+      "Mag",
+      "Giu",
+      "Lug",
+      "Ago",
+      "Set",
+      "Ott",
+      "Nov",
+      "Dic"
+    ],
     "dateFormat": "dd/mm/yy",
     "firstDayOfWeek": 1,
     "today": "Oggi",
@@ -85,19 +135,57 @@
       "events": {
         "title": "programma 2024",
         "monthLabels": [
-          { "full": "Gen", "short": "01" },
-          { "full": "Feb", "short": "02" },
-          { "full": "Mar", "short": "03" },
-          { "full": "Apr", "short": "04" },
-          { "full": "Mag", "short": "05" },
-          { "full": "Giu", "short": "06" },
-          { "full": "Lug", "short": "07" },
-          { "full": "Ago", "short": "08" },
-          { "full": "Set", "short": "09" },
-          { "full": "Ott", "short": "10" },
-          { "full": "Nov", "short": "11" },
-          { "full": "Dic", "short": "12" }
+          {
+            "full": "Gen",
+            "short": "01"
+          },
+          {
+            "full": "Feb",
+            "short": "02"
+          },
+          {
+            "full": "Mar",
+            "short": "03"
+          },
+          {
+            "full": "Apr",
+            "short": "04"
+          },
+          {
+            "full": "Mag",
+            "short": "05"
+          },
+          {
+            "full": "Giu",
+            "short": "06"
+          },
+          {
+            "full": "Lug",
+            "short": "07"
+          },
+          {
+            "full": "Ago",
+            "short": "08"
+          },
+          {
+            "full": "Set",
+            "short": "09"
+          },
+          {
+            "full": "Ott",
+            "short": "10"
+          },
+          {
+            "full": "Nov",
+            "short": "11"
+          },
+          {
+            "full": "Dic",
+            "short": "12"
+          }
         ]
+      },
+      "restaurants": {
       }
     }
   }
